# api.yaml
@@ -10,7 +10,7 @@ paths:
       parameters:
         - name: data
           in: body
-          required: false
+          required: true
           schema:
             $ref: '#/definitions/OrderItem'
         - name: credential
@@ -20,8 +20,45 @@ paths:
       responses:
         '200':
           description: Request was successful
+          schema:
+            $ref: '#/definitions/OrderItem'
         '409':
           description: The request could not be completed due to a conflict with the current state of the resource.
+        '401':
+          description: Unauthorized
+    delete:
+      operationId: OrderItem_delete
+      parameters:
+        - name: orderItemId
+          in: query
+          required: true
+          type: integer
+        - name: credential
+          in: query
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Request was successful
+        '401':
+          description: Unauthorized
+    put:
+      operationId: OrderItem_modify
+      parameters:
+        - name: credential
+          in: query
+          required: true
+          type: string
+        - name: data
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/OrderItem'
+      responses:
+        '200':
+          description: Request was successful
+          schema:
+            $ref: '#/definitions/OrderItem'
         '401':
           description: Unauthorized
     get:
