# app/src/main/java/hu/bme/mobil_rendszerek/model/OrderItem.java
@@ -3,6 +3,7 @@ package hu.bme.mobil_rendszerek.model;
 import com.google.gson.annotations.SerializedName;
 import com.orm.SugarRecord;
 
+import java.io.Serializable;
 import java.util.Date;
 
 import io.swagger.annotations.ApiModel;
@@ -10,7 +11,7 @@ import io.swagger.annotations.ApiModelProperty;
 
 
 @ApiModel(description = "")
-public class OrderItem extends SugarRecord {
+public class OrderItem extends SugarRecord implements Serializable {
   
   @SerializedName("date")
   private Date date = null;
